--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./styles/app.css">
+    <link rel="stylesheet" href="./libs/swiper/css/swiper.min.css">
 </head>
 <body>
-    
+    <div id="app"></div>
+    <script src="./libs/zepto.min.js"></script>
+    <script src="./libs/swiper/js/swiper.min.js"></script>
     <script src="./libs/template-web.js"></script>
     <script src="./scripts/app.js"></script>
-    
 </body>
 </html>
